<resources>
    <string name="app_name">Arkanoid</string>
    <string name="login_email">E-mail</string>
    <string name="login_psw">Password</string>
    <string name="login_button">Login</string>
    <string name="login_to_signin">Non sei registrato? Registrati ora!</string>
    <string name="signin_username">Crea il tuo username!</string>
    <string name="signin_email">Inserisci la tua e-mail</string>
    <string name="signin_psw">Crea la tua password</string>
    <string name="signin_psw_confirm">Conferma password</string>
    <string name="signin_button">Registrati</string>
    <string name="signin_check_mail">Registrazione completata, controlla la tua email!</string>
    <string name="attention">ATTENZIONE</string>
    <string name="signin_verify_email">Per proseguire verifica la tua mail!</string>
    <string name="signin_failed">REGISTRAZIONE FALLITA!</string>
    <string name="sigin_failure_msg">Verifica di aver inserito correttamente i dati!</string>
    <string name="empty_field">CAMPI VUOTI</string>
    <string name="signin_empty_field_msg">Verifica di aver inserito correttamente i dati!</string>
    <string name="login_verify_mail">Verifica prima la tua mail.</string>
    <string name="login_failed_authentication">Autenticazione fallita</string>
    <string name="login_missing_mail">Inserisci la mail</string>
    <string name="login_missing_psw">Inserisci la password</string>
    <string name="signin_email_error">Inserire una e-mail valida!</string>
    <string name="signin_psw_error">Inserire una password!</string>
    <string name="signin_psw_lenght_error">La password deve avere almeno 6 caratteri!</string>
    <string name="signin_psw_confirm_error">Le password non coincidono</string>
    <string name="exit_confirm">Sei sicuro di voler uscire?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="guest_mode">Gioca come ospite</string>
    <string name="recovery_password_quest">Hai dimenticato la password?</string>
    <string name="recovery_password">Reset password</string>
    <string name="send_request_recovery_password">Invia richiesta</string>
    <string name="message_hint">  Scrivi un messaggio</string>
    <string name="send">Invia</string>
    <string name="invalid_username">Inserire un username valido! (MAX 16 caratteri)</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galleria</string>
    <string name="cancel">Annulla</string>
    <string name="insert_email_to_reset">Inserisci il tuo indirizzo e-mail</string>
    <string name="select_image">Seleziona l\'immagine</string>
    <string name="error">Errore!</string>
    <string name="email_nor_registered">Questa mail non risulta essere registrata!</string>
    <string name="reset_psw">Reset password</string>
    <string name="check_email">Controlla la tua casella e-mail</string>
    <string name="resume">Riprendi</string>
    <string name="settings">Impostazioni</string>
    <string name="exit">Abbandona</string>
    <string name="pause">Pausa</string>
    <string-array name="commands">
        <item>Seleziona una tipologia di comando</item>
        <item>Accelerometro</item>
        <item>Gamepad</item>
        <item>Touch-screen</item>
    </string-array>
    <string name="touch">Touch</string>
    <string name="accelerometer">Accelerometro</string>
    <string name="gamepad">Gamepad</string>
    <string name="commands_selector"> Comandi</string>
    <string name="languages_selector"> Lingua</string>
    <string name="settings_select_commands_info">Tipologia comandi di gioco</string>
    <string name="commands_confirm">OK</string>
    <string name="commands_not_confirm">OK</string>
    <string name="commands_info_dialog">
        È possibile controllare la barra in tre modalità differenti, mediante: \n
        \n1. Accelerometro: inclinando lo smartphone verso sinistra o destra;
        \n\n2. Gamepad: premendo due pulsanti direzionali in sovrimpressione per spostare la barra verso sinistra o destra;
        \n\n3. Touch-screen: spostando la barra in qualsiasi posizione desiderata.
    </string>
    <string name="messaggio_vittoria_boss">
        Hai completato la modalità arcade sconfigendo il Boss finale!
    </string>
    <string name="messaggio_partita_tempo">
        Bravo, il tuo tempo è stato registrato!\n
    </string>
    <string name="messaggio_partita_tema">
        Bravo, hai completato tutti i livelli a tema, inseriremo presto nuovi personaggi!
    </string>
    <string name="change_command">Controlli</string>
    <string name="touch_selected">Comandi touch attivati</string>
    <string name="accelerometer_selected">Accelerometro attivato</string>
    <string name="gamepad_selected">Gamepad attivato</string>
    <string name="send_level">Scambia livelli</string>
    <string name="play">Sfida!</string>
    <string name="message">Messaggi</string>
    <string name="vittoria">HAI VINTO, BRAVO!</string>
    <string name="vittoria_tempo">HAI COMPLETATO IL LIVELLO!</string>
    <string name="vittoria_tema">HAI COMPLETATO IL LIVELLO!</string>
    <string name="Invia">Invia</string>
    <string name="Body">Testo</string>
    <string name="Subject">Oggetto</string>
    <string name="email">E-mail</string>
    <string name="email_contact">arkanoidsms2021@gmail.com</string>
    <string name="error_contact">Nessuna app supporta questa funzionalità</string>
    <string name="error_fields">Compilare tutti i campi!</string>
    <string name="blue_chosen">Colore scelto: blu</string>
    <string name="green_chosen">Colore scelto: verde</string>
    <string name="orange_chosen">Colore scelto: arancione</string>
    <string name="pink_chosen">Colore scelto: rosa</string>
    <string name="purple_chosen">Colore scelto: porpora</string>
    <string name="red_chosen">Colore scelto: rosso</string>
    <string name="yellow_chosen">Colore scelto: giallo</string>
    <string name="black_chosen">Colore scelto: nero</string>
    <string name="dark_red_chosen">Colore scelto: rosso scuro</string>
    <string name="dark_grey_chosen">Colore scelto: grigio scuro</string>
    <string name="white_chosen">Colore scelto: bianco</string>
    <string name="dark_blue_chosen">Colore scelto: blu scuro</string>
    <string name="skin_chosen">Colore scelto: rosa carne</string>
    <string name="brown_chosen">Colore scelto: marrone</string>
    <string name="aqua_chosen">Colore scelto: aqua</string>
    <string name="grey_chosen">Colore scelto: grigio</string>
    <string name="lite_grey_chosen">Colore scelto: grigio chiaro</string>
    <string name="choose_speed">Scegli la velocità della pallina!</string>
    <string name="ereaser_chosen">Gomma selezionata!</string>
    <string name="confirm">Conferma</string>
    <string name="name_level">Dai un nome al tuo livello!</string>
    <string name="name_level_error">Attenzione! Dai un nome al tuo livello!</string>
    <string name="show_levels">I miei livelli</string>
    <string name="users">Utenti</string>
    <string name="theme_match">Modalità a tema</string>
    <string name="classified_challenge">Modalità a tempo</string>
    <string name="infinity_mode">Modalità infinita</string>
    <string name="arcade_mode">Modalità arcade</string>
    <string name="level_send">Hai inviato questo livello!</string>
    <string name="new_level">Crea un nuovo livello!</string>
    <string-array name="languages">
        <item>Seleziona una lingua</item>
        <item id="1">Italiano</item>
        <item id="2">English</item>
    </string-array>
    <string name="title_activity_ranking">MainActivity</string>
    <string name="score_ranking">Classifica Punteggi</string>
    <string name="time_ranking">Classifica Tempi</string>
    <string name="menu">Menu</string>
    <string name="profile">Profilo</string>
    <string name="rankings">Classifiche</string>
    <string name="logout">Logout</string>
    <string name="ranking_score">Classifica Modalità Infinita</string>
    <string name="ranking_time">Classifica Modalità a Tempo</string>
    <string name="boss_coming">IL BOSS STA ARRIVANDO...</string>
    <string name="wait_for_friend">Richieste inviata!</string>
    <string name="wait">Aspetta che il tuo amico giochi!</string>
    <string name="accept">ACCETTA</string>
    <string name="challenge_received">Ricevute</string>
    <string name="challenge_request">Inviate</string>
    <string name="winner">VITTORIA!</string>
    <string name="win">Fantastico, hai battuto il tuo amico!</string>
    <string name="loser">Sconfitta</string>
    <string name="lost">"Oh no! Hai perso! "</string>
    <string name="history">Storico Partite</string>
    <string name="italian_selected">Italiano selezionato</string>
    <string name="english_selected">English selected</string>
    <string name="sconfitta_boss">HAI PERSO!</string>
    <string name="messaggio_sconfitta">Il Boss ti ha sconfitto...</string>
    <string name="torna_menu">Torna al menu principale</string>
    <string name="insert_photo">Inserisci una immagine del profilo!</string>
    <string name="challenge">Sfide</string>
    <string name="landscape_mode">Modalità landscape</string>
    <string name="changeLang">CAMBIA LINGUA</string>
    <string name="edit_profile">Modifica profilo</string>
    <string name="edit_profile_picture">Modifica immagine profilo</string>
    <string name="edit_password">Modifica password</string>
    <string name="speed_created_level">Velocità: </string>
    <string name="win_challenges_list">Vittoria!</string>
    <string name="lose_challenges_list">Sconfitta!</string>
    <string name="waiting">in attesa</string>
    <string name="touch_here_to_continue">Tocca qui per continuare...</string>
    <string name="touch_the_color">Scegli il colore!</string>
    <string name="draw_bricks">Disegna i mattoncini nell\'area sottostante!</string>
    <string name="select_the_color">Seleziona il colore toccando un mattone colorato!</string>
    <string name="select_a_language">Seleziona lingua</string>
    <string name="timeMode_info_dialog">Fai molta attenzione quando metti pausa in questa modalità!!\n\n ...Il tempo va avanti...</string>
    <string name="messaggio_landscape">Bravo, hai completato tutti i livelli in modalità landscape!</string>
    <string name="choose_app_email">Scegli app</string>
    <string name="error_image_not_found">Inserisci un\'immagine!</string>
    <string name="permission_denied">Permessi negati</string>
    <string name="draw_challenge">Pareggio!</string>
    <string name="score_show_dialog">\n\nPunteggio: </string>
    <string name="distance">Distanza:</string>
    <string name="label_challenge_list">Sfide</string>
    <string name="label_create_level">Crea livello</string>
    <string name="label_personal_levels">I miei livelli</string>
    <string name="label_contact_us">Contattaci</string>
    <string name="label_settings">Impostazioni</string>
    <string name="label_reset_password">Reset password</string>
    <string name="label_profile">Profilo</string>
    <string name="label_user_list">Utenti</string>
    <string name="label_sign_in">Registrazione</string>
    <string name="label_login">Login</string>
    <string name="label_theme_mode">Modalità a tema</string>
    <string name="label_time_mode">Modalità a tempo</string>
    <string name="label_arcade_mode">Modalità arcade</string>
    <string name="label_infinity_home">Modalità infinita</string>
    <string name="label_landscape_mode">Modalità landscape</string>
    <string name="km">Km</string>
    <string name="unlimited">Illimitata</string>
    <string name="first_run_info">Prima di poter giocare imposta la tipologia di comandi e la lingua!</string>
    <string name="first_run">Primo avvio</string>
    <string name="send_challenges">Sfide inviate</string>
    <string name="received_challenges">Sfide ricevute</string>
</resources>