<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/show_menu"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/menu"/>

    <item android:id="@+id/profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile"/>

    <item android:id="@+id/received_request"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/challenge_received"/>

    <item android:id="@+id/sent_request"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/challeng_request"/>

    <item android:id="@+id/story"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/story"/>

    <item android:id="@+id/rankings"
        android:icon="@drawable/ic_ranking"
        android:title="@string/rankings"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

    <item android:id="@+id/logout"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/logout"/>

</menu>