<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity"
    android:orientation="vertical"
    android:background="@drawable/background_menu">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etTo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:errorEnabled="true"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:hintTextColor="@color/button"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="235dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:text="@string/email_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button"
            android:textColorHint="@color/button"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSubject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:errorEnabled="true"
        app:hintTextColor="@color/button"
        android:ems="10"
        android:hint="@string/Subject"
        android:inputType="text"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="235dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button"
            android:textColorHint="@color/button"
            android:maxLength="31"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etBody"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:errorEnabled="true"
        app:hintTextColor="@color/button"
        android:ems="10"
        android:hint="@string/Body"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="235dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button"
            android:textColorHint="@color/button"
            android:maxLength="496"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        android:text="@string/Invia"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:textColor="#000000"
        android:textStyle="bold"
        app:cornerRadius="15dp"/>

</LinearLayout>