<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.arkanoid.ResetPasswordActivity"
    android:background="@drawable/backgroud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="200dp"
            android:text="@string/recovery_password"
            android:textSize="24sp"
            android:textColor="@color/button"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_reset_pswc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/button"
            app:boxStrokeColor="@color/button"
            app:errorEnabled="true"
            app:hintTextColor="@color/button"
            android:ems="10"
            android:hint="@string/insert_email_to_reset"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="235dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reset_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:textColorHint="@color/button"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_psw"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:onClick="resetPassword"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/send_request_recovery_password"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="15dp"/>

    </LinearLayout>
</ScrollView>