<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:foreground="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".CreateLevelActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/level_namec"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/name_level"
        android:inputType="text"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:hintTextAppearance="@style/LoginTextInputLayoutStyle"
        app:errorEnabled="true"
        app:hintTextColor="@color/button"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="235dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/level_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button"
            android:textColorHint="@color/button"
            android:maxLength="15"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/choose_speed"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="20dp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:max="15"
        android:min="1"
        android:progress="1"
        android:progressDrawable="@layout/progress_seekbar"
        android:thumb="@drawable/thumb"
        android:splitTrack="false"
        android:shape="oval"
        />

    <TextView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:textColor="@color/button"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textAlignment="center"
        />


    <Button
        android:id="@+id/confirm_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/button"
        android:onClick="saveLevel"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/confirm"
        android:textColor="#000"
        android:textStyle="bold"
        app:cornerRadius="15dp" />


</LinearLayout>