<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@drawable/backgroud">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/activity_profilo"
        app:layout_constraintEnd_toEndOf="@+id/activity_profilo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_profilo">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photo"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_baseline_person_white_24"
            android:minHeight="200dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_usernamec"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Username"
            android:textColorHint="@color/button"
            app:boxStrokeColor="@color/button"
            app:hintTextColor="@color/button"
            android:inputType="text"
            app:errorEnabled="true"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="235dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:textColor="@color/button"
                android:textColorHint="@color/button"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_emailc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:textColorHint="@color/button"
            app:boxStrokeColor="@color/button"
            app:hintTextColor="@color/button"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            app:errorEnabled="true"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="235dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_email"
                android:textColor="@color/button"
                android:textColorHint="@color/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:visibility="invisible"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="15dp"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_profilo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        tools:context="com.teamproblemsolver.fabsubmenu.MainActivity">


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:menu_animationDelayPerItem="50"
            app:menu_backgroundColor="@android:color/transparent"
            app:menu_buttonSpacing="0dp"
            app:menu_colorNormal="@color/violet"
            app:menu_colorPressed="@color/violet"
            app:menu_colorRipple="@color/violet"
            app:menu_fab_hide_animation="@anim/hide_to_bottom"
            app:menu_fab_show_animation="@anim/show_from_bottom"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/fab_add"
            app:menu_labels_colorNormal="@color/semiTransparentColor"
            app:menu_labels_colorPressed="@color/semiTransparentColor"
            app:menu_labels_colorRipple="@color/semiTransparentColor"
            app:menu_labels_cornerRadius="3dp"
            app:menu_labels_ellipsize="none"
            app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            app:menu_labels_margin="0dp"
            app:menu_labels_maxLines="-1"
            app:menu_labels_padding="8dp"
            app:menu_labels_paddingBottom="4dp"
            app:menu_labels_paddingLeft="8dp"
            app:menu_labels_paddingRight="8dp"
            app:menu_labels_paddingTop="4dp"
            app:menu_labels_position="left"
            app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            app:menu_labels_showShadow="true"
            app:menu_labels_singleLine="false"
            app:menu_labels_textColor="#FFFFFF"
            app:menu_labels_textSize="14sp"
            app:menu_openDirection="up"
            app:menu_shadowColor="#66000000"
            app:menu_shadowRadius="4dp"
            app:menu_shadowXOffset="1dp"
            app:menu_shadowYOffset="3dp"
            app:menu_showShadow="true">


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mod_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_white_24"
                app:fab_colorNormal="@color/violet"
                app:fab_label="@string/edit_profile"
                app:fab_size="mini"
                app:menu_colorPressed="#00030747" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mod_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:fab_colorNormal="@color/violet"
                app:fab_label="@string/edit_profile_picture"
                app:fab_size="mini"
                app:menu_colorPressed="#00030747" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mod_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_lock_24"
                app:fab_colorNormal="@color/violet"
                app:fab_label="@string/edit_password"
                app:fab_size="mini"
                app:menu_colorPressed="#00030747" />

        </com.github.clans.fab.FloatingActionMenu>



    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu_profile"
        app:itemTextColor="@color/button"
        app:itemIconTint="@color/button"/>

</androidx.constraintlayout.widget.ConstraintLayout>